--- a/source/includes/extracts-agg-operators.yaml
+++ b/source/includes/extracts-agg-operators.yaml
@@ -177,10 +177,6 @@ content: |
         - Selects a subset of the array to return an array with only
           the elements that match the filter condition.
 
-      * - :expression:`$first`
-
-        - Returns the first array element. Distinct from :group:`$first` accumulator.
-
       * - :expression:`$firstN`
 
         - Returns a specified number of elements from the beginning of an array.
@@ -200,10 +196,6 @@ content: |
       * - :expression:`$isArray`
 
         - Determines if the operand is an array. Returns a boolean.
-
-      * - :expression:`$last`
-
-        - Returns the last array element. Distinct from :group:`$last` accumulator.
 
       * - :expression:`$lastN`
 
@@ -1061,10 +1053,8 @@ content: |
 
       * - :group:`$first`
 
-        - Returns a value from the first document for each group. Order
-          is only defined if the documents are sorted.
-          
-          Distinct from the :expression:`$first` array operator.
+        - Returns the result of an :ref:`expression
+          <aggregation-expressions>` for the first document in a group.
 
           .. versionchanged:: 5.0
 
@@ -1084,10 +1074,8 @@ content: |
 
       * - :group:`$last`
 
-        - Returns a value from the last document for each group. Order
-          is only defined if the documents are sorted.
-          
-          Distinct from the :expression:`$last` array operator.
+        - Returns the result of an :ref:`expression
+          <aggregation-expressions>` for the last document in a group.
 
           .. versionchanged:: 5.0
 
@@ -1212,6 +1200,16 @@ content: |
 
         - Returns an average of the specified expression or list of
           expressions for each document. Ignores non-numeric values.
+
+      * - :group:`$first`
+
+        - Returns the result of an :ref:`expression
+          <aggregation-expressions>` for the first document in a group.
+
+      * - :group:`$last`
+
+        - Returns the result of an :ref:`expression
+          <aggregation-expressions>` for the last document in a group.
 
       * - :group:`$max`
 
@@ -1352,9 +1350,9 @@ content: |
 
       * - :group:`$first`
 
-        - Returns the value that results from applying an
-          :ref:`expression <aggregation-expressions>` to the first
-          document in a group or :ref:`window <setWindowFields-window>`.
+        - Returns the result of an :ref:`expression
+          <aggregation-expressions>` for the first document in a group
+          or :ref:`window <setWindowFields-window>`.
 
           .. versionchanged:: 5.0
 
@@ -1368,9 +1366,9 @@ content: |
 
       * - :group:`$last`
 
-        - Returns the value that results from applying an
-          :ref:`expression <aggregation-expressions>` to the last
-          document in a group or :ref:`window <setWindowFields-window>`.
+        - Returns the result of an :ref:`expression
+          <aggregation-expressions>` for the last document in a group
+          or :ref:`window <setWindowFields-window>`.
         
           .. versionchanged:: 5.0
 
