--- a/snooty.toml
+++ b/snooty.toml
@@ -181,6 +181,8 @@ toc_landing_pages = [
    "/release-notes/5.3",
    "/release-notes/6.0",
    "/release-notes/6.1",
+   "/release-notes/6.2",
+   "/release-notes/6.3",
    "/replication",
    "/security",
    "/sharding",
