--- a/snooty.toml
+++ b/snooty.toml
@@ -183,6 +183,7 @@ toc_landing_pages = [
    "/release-notes/6.1",
    "/release-notes/6.2",
    "/release-notes/6.3",
+   "/release-notes/7.0",
    "/replication",
    "/security",
    "/sharding",
