re-add last supported version to snooty.toml

--- a/snooty.toml
+++ b/snooty.toml
@@ -231,6 +231,7 @@ package-name-enterprise = "mongodb-enterprise"
 package-name = "mongodb"
 version = "6.2"
 latest-lts-version = "6.0"
+last-supported-version = "5.0"
 release = "6.2.1"
 version-dev = "6.3"
 pgp-version = "{+version+}"
