--- a/source/includes/extracts-wildcard-indexes.yaml
+++ b/source/includes/extracts-wildcard-indexes.yaml
@@ -166,10 +166,10 @@ content: |
          $match : { $ne : [ "product_attributes.tags", [ "waterproof", "fireproof" ] ] }
        }])
 
-  Field is not equal to ``null``
-    If a given field is an array in any document in the collection, 
-    wildcard indexes cannot support queries for documents where that 
-    field is not equal to ``null``.
+  Array Field is equal or not equal to null
+    If a given field is an array in any document in the collection,
+    wildcard indexes cannot support queries for documents where that
+    field is equal or not equal to null.
 
     For example, consider a collection ``inventory`` with a wildcard
     index on ``product_attributes``. The wildcard index
@@ -179,11 +179,38 @@ content: |
 
     .. code-block:: javascript
 
-       db.inventory.find( { $ne : [ "product_attributes.tags", null ] } )
+       db.inventory.find( { "product_attributes.tags": { $ne: null } } )
+
+       db.inventory.find( { "product_attributes.tags": null } )
 
        db.inventory.aggregate([{ 
-         $match : { $ne : [ "product_attributes.tags", null ] }
+         $match : { "product_attributes.tags": { $ne: null } }
        }])
+
+       db.inventory.aggregate([{ 
+         $match : { "product_attributes.tags": null }
+       }])
+
+  Field is equal to null
+    Wildcard indexes cannot support queries for documents where a field
+    is equal to null. The query ``{ $eq: null }`` matches all
+    documents where the field is null or missing. Wildcard are
+    :ref:`sparse <index-type-sparse>`, meaning they do not index the
+    documents where the indexed field is missing, and therefore cannot
+    support a match on null.
+
+    For example, consider a collection ``inventory`` with a wildcard index
+    on ``product_attributes``. The wildcard index cannot support the
+    following queries:
+
+    .. code-block:: javascript
+
+       db.inventory.find( { "product_attributes.price": { $eq: null } } )
+       
+       db.inventory.aggregate([{
+          $match : { "product_attributes.price": { $eq: null } }
+       }])
+
 
 ---
 ref: wildcard-index-id
