DOCSP-26172-change-stream-events-update (#2797)
* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-change-stream-events-update

* DOCSP-26172-cha

--- a/source/includes/extracts-agg-stages.yaml
+++ b/source/includes/extracts-agg-stages.yaml
@@ -37,6 +37,10 @@ content: |
           collection.  This stage can only occur once in an aggregation
           pipeline and it must occur as the first stage.
 
+      * - :pipeline:`$changeStreamSplitLargeEvent`
+
+        -  .. include:: /includes/changeStreamSplitLargeEvent-introduction.rst
+
       * - :pipeline:`$collStats`
 
         - Returns statistics regarding a collection or view.
