DOCSP-27873 eol cleanup parameters (#2536)
* DOCSP-27873 EOL reference cleanup for Parameters page

* Refactors 'New in version X' text

* Removes EOL release references

* Replaces freeform version references with versionadded directives

* Fixes build issue

* Fixes per Ali

* Fixes per Ali

* Fixes per Ali

* Update source/reference/parameters.txt

Co-authored-by: Alison Huh <112565127+ajhuh-mdb@users.noreply.github.com>

* Update source/reference/parameters.txt

Co-authored-by: Alison Huh <112565127+ajhuh-mdb@users.noreply.github.com>

* Update source/reference/parameters.txt

Co-authored-by: Alison Huh <112565127+ajhuh-mdb@users.noreply.github.com>

---------

Co-authored-by: Alison Huh <112565127+ajhuh-mdb@users.noreply.github.com>

--- a/source/includes/extracts-hybrid-index-fcv.yaml
+++ b/source/includes/extracts-hybrid-index-fcv.yaml
@@ -49,12 +49,7 @@ content: |
 ref: 4.2-index-limit
 content: |
 
-  .. versionchanged:: 4.2
+  - For :ref:`feature compatibility version (fcv) <view-fcv>` ``"4.2"``
+    and later, the index build memory limit applies to all index builds.
 
-  - For :ref:`feature compatibility version (fcv) <view-fcv>` ``"4.2"``,
-    the index build memory limit applies to all index builds.
-
-  - For :ref:`feature compatibility version (fcv) <view-fcv>` ``"4.0"``,
-    the index build memory limit only applies to foreground
-    index builds.
 ...
