DOCSP-29388 multiple missing words (#2973)

--- a/source/includes/extracts-agg-operators.yaml
+++ b/source/includes/extracts-agg-operators.yaml
@@ -1010,7 +1010,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$avg`
 
@@ -1018,7 +1018,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$bottom`
 
@@ -1027,7 +1027,7 @@ content: |
 
           .. versionadded:: 5.2
 
-          Available in :pipeline:`$group` and
+          Available in the :pipeline:`$group` and
           :pipeline:`$setWindowFields` stages.
 
       * - :group:`$bottomN`
@@ -1037,7 +1037,7 @@ content: |
 
           .. versionadded:: 5.2
 
-          Available in :pipeline:`$group` and
+          Available in the :pipeline:`$group` and
           :pipeline:`$setWindowFields` stages.
 
       * - :group:`$count`
@@ -1048,7 +1048,7 @@ content: |
 
           .. versionadded:: 5.0
 
-             Available in :pipeline:`$group` and
+             Available in the :pipeline:`$group` and
              :pipeline:`$setWindowFields` stages.
 
       * - :group:`$first`
@@ -1058,7 +1058,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$firstN`
 
@@ -1068,7 +1068,7 @@ content: |
 
           .. versionadded:: 5.2
 
-             Available in :pipeline:`$group`, 
+             Available in the :pipeline:`$group`, 
              :ref:`expression <aggregation-expressions>` and 
              :pipeline:`$setWindowFields` stages.
 
@@ -1079,7 +1079,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$lastN`
 
@@ -1089,7 +1089,7 @@ content: |
 
           .. versionadded:: 5.2
 
-             Available in :pipeline:`$group`, 
+             Available in the :pipeline:`$group`, 
              :ref:`expression <aggregation-expressions>` and 
              :pipeline:`$setWindowFields` stages.
 
@@ -1099,7 +1099,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$maxN`
 
@@ -1124,7 +1124,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$push`
 
@@ -1133,7 +1133,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$stdDevPop`
 
@@ -1141,7 +1141,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$stdDevSamp`
 
@@ -1149,7 +1149,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$sum`
 
@@ -1157,7 +1157,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$top`
 
@@ -1166,7 +1166,7 @@ content: |
 
           .. versionadded:: 5.2
 
-          Available in :pipeline:`$group` and
+          Available in the :pipeline:`$group` and
           :pipeline:`$setWindowFields` stages.
 
       * - :group:`$topN`
@@ -1176,7 +1176,7 @@ content: |
 
           .. versionadded:: 5.2
 
-          Available in :pipeline:`$group` and
+          Available in the :pipeline:`$group` and
           :pipeline:`$setWindowFields` stages.
 
 ---
@@ -1263,7 +1263,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$avg`
 
@@ -1272,7 +1272,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$bottom`
 
@@ -1281,7 +1281,7 @@ content: |
 
           .. versionadded:: 5.2
 
-          Available in :pipeline:`$group` and
+          Available in the :pipeline:`$group` and
           :pipeline:`$setWindowFields` stages.
 
       * - :group:`$bottomN`
@@ -1291,7 +1291,7 @@ content: |
 
           .. versionadded:: 5.2
 
-          Available in :pipeline:`$group` and
+          Available in the :pipeline:`$group` and
           :pipeline:`$setWindowFields` stages.
 
       * - :group:`$count`
@@ -1356,7 +1356,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$integral`
 
@@ -1372,13 +1372,13 @@ content: |
         
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$linearFill`
 
         - .. include:: /includes/fact-linear-fill-description.rst
 
-          Available in :pipeline:`$setWindowFields` stage.
+          Available in the :pipeline:`$setWindowFields` stage.
 
           .. versionadded:: 5.3
 
@@ -1386,7 +1386,7 @@ content: |
 
         - .. include:: /includes/fact-locf-description.rst
 
-          Available in :pipeline:`$setWindowFields` stage.
+          Available in the :pipeline:`$setWindowFields` stage.
 
           .. versionadded:: 5.2
 
@@ -1397,7 +1397,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$min`
 
@@ -1406,7 +1406,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$minN`
 
@@ -1427,7 +1427,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$rank`
 
@@ -1455,7 +1455,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$stdDevSamp`
 
@@ -1465,7 +1465,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$sum`
 
@@ -1474,7 +1474,7 @@ content: |
 
           .. versionchanged:: 5.0
 
-             Available in :pipeline:`$setWindowFields` stage.
+             Available in the :pipeline:`$setWindowFields` stage.
 
       * - :group:`$top`
 
@@ -1483,7 +1483,7 @@ content: |
 
           .. versionadded:: 5.2
 
-          Available in :pipeline:`$group` and
+          Available in the :pipeline:`$group` and
           :pipeline:`$setWindowFields` stages.
 
       * - :group:`$topN`
@@ -1493,5 +1493,5 @@ content: |
 
           .. versionadded:: 5.2
 
-          Available in :pipeline:`$group` and
+          Available in the :pipeline:`$group` and
           :pipeline:`$setWindowFields` stages.
