DOCSP-26914 sharding defragmentation refactor (#2594)
* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-26914-sharding-defragmentation-refactor

* DOCSP-

--- a/snooty.toml
+++ b/snooty.toml
@@ -87,6 +87,7 @@ toc_landing_pages = [
    "/core/sharded-cluster-components",
    "/core/sharding-change-a-shard-key",
    "/core/sharding-balancer-administration",
+   "/core/defragment-sharded-collections",
    "/core/sharding-data-partitioning",
    "/core/sharding-shard-key",
    "/core/storage-engines",
