--- a/source/includes/extracts-x509-certificate.yaml
+++ b/source/includes/extracts-x509-certificate.yaml
@@ -101,6 +101,12 @@ content: |
         CN=host1,OU=Dept1,OU=Sales,O=MongoDB
         CN=host2,OU=Dept1,O=MongoDB
 
+     You can also specify a custom set of DN attributes and values in the configuration file using the 
+     :setting:`net.tls.clusterAuthX509.attributes` setting.  This is useful 
+     when you wish to configure X.509 authentication with member certificates that do not have DC, O, or OU attributes in their subject DNs.
+
+     For more information, see :ref:`x509-rotate-member-certs`.
+
    - Either the Common Name (``CN``) or one of the Subject Alternative
      Name (``SAN``) entries must match the server hostname for other cluster
      members. Starting in MongoDB 4.2, when comparing ``SAN``\s, MongoDB can 
