--- a/snooty.toml
+++ b/snooty.toml
@@ -312,10 +312,13 @@ node-libmongocrypt-binding-docs = "https://github.com/mongodb/libmongocrypt/tree
 csharp-api-docs = "https://mongodb.github.io/mongo-csharp-driver/2.18/apidocs/html"
 java-api-docs = "https://mongodb.github.io/mongo-java-driver/4.7/apidocs"
 go-api-docs = "https://pkg.go.dev/go.mongodb.org/mongo-driver@v1.10.3"
+enterprise-download-link = "https://www.mongodb.com/try/download/enterprise"
+
 # C2C Product
 c2c-full-product-name = "MongoDB Cluster-to-Cluster Sync"
 c2c-product-name = "Cluster-to-Cluster Sync"
 c2c-docs = "https://www.mongodb.com/docs/cluster-to-cluster-sync/current"
+
 
 [[banners]]
 targets = [
