--- a/snooty.toml
+++ b/snooty.toml
@@ -306,6 +306,7 @@ node-libmongocrypt-binding-docs = "https://github.com/mongodb/libmongocrypt/tree
 csharp-api-docs = "https://mongodb.github.io/mongo-csharp-driver/2.18/apidocs/html"
 java-api-docs = "https://mongodb.github.io/mongo-java-driver/4.7/apidocs"
 go-api-docs = "https://pkg.go.dev/go.mongodb.org/mongo-driver@v1.10.3"
+enterprise-download-link = "https://www.mongodb.com/try/download/enterprise"
 
 [[banners]]
 targets = [
