--- a/snooty.toml
+++ b/snooty.toml
@@ -256,6 +256,11 @@ fts = "Atlas Search"
 # In Use Encryption Constants
 csfle = "Client-Side Field Level Encryption"
 csfle-abbrev = "CSFLE"
+qe = "Queryable Encryption"
+qe-abbr = ":abbr:`QE (Queryable Encryption)`"
+qe-preview = "{+qe+} Public Preview"
+qe-framework = "{+qe+} framework"
+qe-equality-ga = "{+qe-framework+} with equality search"
 in-use-doc = "document with encrypted fields"
 in-use-doc-title = "Document with Encrypted Fields"
 in-use-docs = "documents with encrypted fields"
@@ -289,8 +294,6 @@ libmongocrypt-version = "1.8"
 mongodb-crypt-version = "1.7.3"
 sample-app-url-csfle = "https://github.com/mongodb-university/docs-in-use-encryption-examples/tree/main/csfle"
 sample-app-url-qe = "https://github.com/mongodb-university/docs-in-use-encryption-examples/tree/main/queryable-encryption"
-qe = "Queryable Encryption"
-qe-abbr = ":abbr:`QE (Queryable Encryption)`"
 enc-fields-map = "encrypted fields map"
 enc-fields-map-title = "Encrypted Fields Map"
 shared-library = "Automatic Encryption Shared Library"
@@ -328,14 +331,12 @@ targets = [
     "core/queryable-encryption/*/*.txt",
 ]
 
-variant = "danger"
+variant = "warning"
 value = """
-    Queryable Encryption is in Public Preview and available for \
-    evaluation purposes. Public Preview is not recommended for \
-    production deployments as breaking changes may be introduced. \
-    To learn more about the Preview please see the \
-    `Queryable Encryption Preview <https://www.mongodb.com/blog/post/mongodb-releases-queryable-encryption-preview/>`__ \
-    blog post.
+    {+qe-equality-ga+} is generally available (GA) in \
+    MongoDB 7.0 and later. Data encrypted using the {+qe-preview+} \ 
+    from earlier versions is incompatible with the GA. \
+    For more information, see :ref:`7.0-compatibility`.
     """
 
 [[banners]]
@@ -343,8 +344,8 @@ targets = ["core/csfle.txt", "core/csfle/*.txt", "core/csfle/*/*.txt"]
 
 variant = "tip"
 value = """
-    The next-generation Queryable Encryption feature is now in Public Preview. \
-    To learn more about Queryable Encryption, see :ref:`qe-manual-feature-qe`.
+    {+qe-equality-ga+} is now available. \
+    To learn more about {+qe+}, see :ref:`qe-manual-feature-qe`.
     """
 
 [bundle]
