Internal PR feedback

--- a/snooty.toml
+++ b/snooty.toml
@@ -333,7 +333,7 @@ targets = [
 
 variant = "warning"
 value = """
-    {+qe-equality-ga+} is generally available (GA) in \
+    The {+qe-equality-ga+} is generally available (GA) in \
     MongoDB 7.0 and later. Data encrypted using the {+qe-preview+} \ 
     from earlier versions is incompatible with the GA. \
     For more information, see :ref:`7.0-compatibility`.
@@ -345,7 +345,7 @@ targets = ["core/csfle.txt", "core/csfle/*.txt", "core/csfle/*/*.txt"]
 variant = "tip"
 value = """
     {+qe-equality-ga+} is now available. \
-    To learn more about {+qe+}, see :ref:`qe-manual-feature-qe`.
+    To learn more, see :ref:`qe-manual-feature-qe`.
     """
 
 [bundle]
