DOCSP-29863 7.0 Install Docs (#3130)
* DOCSP-29863 7.0 Install Docs

* release notes edits

* remove in-dev

* build errors

* linux red hat

* ubuntu community

* debian community

* suse community

* amazon linux

* add macos

* add windows and docker

* enterprise installation

* build errors + missing files

* include files

* fix docker ref link

* build error

* JA feedback

* text styling on debian install page

* JA feedback

* fix text styling

* final sweep through

* add docker link to community page

* styling

* final cleanup

* platform support cleanup

* JA feedback

* AN feedback

* 7.0 platform support updates

* remove downgrade docs

* docker build error

* AE feedback

--- a/source/includes/steps-install-mongodb-on-amazon.yaml
+++ b/source/includes/steps-install-mongodb-on-amazon.yaml
@@ -6,9 +6,9 @@ source:
 replacement:
   distro_name: "amazon"
   distro_link: "`MongoDB repository <https://repo.mongodb.org/yum/amazon/>`_"
-  distro_release: "2013.03"
-  distro_name_full: "Amazon Linux"
-  distro_num: "2013.03"
+  distro_release: "2023"
+  distro_name_full: "Amazon Linux 2023"
+  distro_num: "2023"
 ---
 stepnum: 2
 level: 4
