--- a/snooty.toml
+++ b/snooty.toml
@@ -101,6 +101,7 @@ toc_landing_pages = [
    "/crud",
    "/geospatial-queries",
    "/indexes",
+   "/installation",
    "/introduction",
    "/mongo",
    "/reference",
@@ -236,7 +237,7 @@ package-name = "mongodb"
 version = "7.0"
 latest-lts-version = "6.0"
 last-supported-version = "5.0"
-release = "6.3"
+release = "7.0"
 version-dev = "7.0"
 pgp-version = "{+version+}"
 rsa-key = "4B7C549A058F8B6B"
