--- a/source/includes/extracts-install-mongodb-manually.yaml
+++ b/source/includes/extracts-install-mongodb-manually.yaml
@@ -22,8 +22,12 @@ content: |
 
      sudo zypper install libcurl4 libopenssl1_0_0 liblzma5
 ---
+ref: install-mongodb-enterprise-manually-debian-11
+content: |
+  .. code-block:: bash
 
-
+     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit snmp openssl liblzma5
+---
 ref: install-mongodb-enterprise-manually-debian-10
 content: |
   .. code-block:: bash
@@ -35,6 +39,12 @@ content: |
   .. code-block:: bash
 
      sudo apt-get install libcurl3 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit snmp openssl liblzma5
+---
+ref: install-mongodb-community-manually-debian-11
+content: |
+  .. code-block:: bash
+
+     sudo apt-get install libcurl4 openssl liblzma5
 ---
 ref: install-mongodb-community-manually-debian-10
 content: |
@@ -86,8 +96,12 @@ content: |
 
      sudo apt-get install libcurl3 openssl liblzma5
 ---
-
-
+ref: install-mongodb-enterprise-manually-redhat-9
+content: |
+  .. code-block:: bash
+ 
+     sudo yum install cyrus-sasl cyrus-sasl-gssapi cyrus-sasl-plain krb5-libs libcurl net-snmp openldap openssl xz-libs
+---
 ref: install-mongodb-enterprise-manually-redhat-8
 content: |
   .. code-block:: bash
