DOCS-15977 autoMergerIntervalSecs and autoMergerThrottlingMS (#3243)
* DOCS-15977 autoMergerInterval and autoMergerIntervalSecs

* internal review

* tech review

* tech review

* Update source/reference/parameters.txt

Co-authored-by: Pierlauro Sciarelli <pierlauro@protonmail.com>

---------

Co-authored-by: Pierlauro Sciarelli <pierlauro@protonmail.com>

--- a/snooty.toml
+++ b/snooty.toml
@@ -253,6 +253,10 @@ sbe-short = "slot-based engine"
 sbe-title = "Slot-Based Query Execution Engine"
 fcv = ":abbr:`fCV (feature compatibility version)`"
 fts = "Atlas Search"
+# Automerger Constants
+auto-merge-upper = "AutoMerger"
+auto-merge-lower = "automerger"
+auto-merge-action = "automerging"
 # In Use Encryption Constants
 csfle = "Client-Side Field Level Encryption"
 csfle-abbrev = "CSFLE"
