--- a/snooty.toml
+++ b/snooty.toml
@@ -262,9 +262,6 @@ csfle = "Client-Side Field Level Encryption"
 csfle-abbrev = "CSFLE"
 qe = "Queryable Encryption"
 qe-abbr = ":abbr:`QE (Queryable Encryption)`"
-qe-preview = "{+qe+} Public Preview"
-qe-framework = "{+qe+} framework"
-qe-equality-ga = "{+qe-framework+} with equality search"
 in-use-doc = "document with encrypted fields"
 in-use-doc-title = "Document with Encrypted Fields"
 in-use-docs = "documents with encrypted fields"
@@ -335,12 +332,14 @@ targets = [
     "core/queryable-encryption/*/*.txt",
 ]
 
-variant = "warning"
+variant = "danger"
 value = """
-    The {+qe-equality-ga+} is generally available (GA) in \
-    MongoDB 7.0 and later. Data encrypted using the {+qe-preview+} \ 
-    from earlier versions is incompatible with the GA. \
-    For more information, see :ref:`7.0-compatibility`.
+    Queryable Encryption is in Public Preview and available for \
+    evaluation purposes. Public Preview is not recommended for \
+    production deployments as breaking changes may be introduced. \
+    To learn more about the Preview please see the \
+    `Queryable Encryption Preview <https://www.mongodb.com/blog/post/mongodb-releases-queryable-encryption-preview/>`__ \
+    blog post.
     """
 
 [[banners]]
@@ -348,10 +347,9 @@ targets = ["core/csfle.txt", "core/csfle/*.txt", "core/csfle/*/*.txt"]
 
 variant = "tip"
 value = """
-    {+qe-equality-ga+} is now available. \
-    To learn more, see :ref:`qe-manual-feature-qe`.
+    The next-generation Queryable Encryption feature is now in Public Preview. \
+    To learn more about Queryable Encryption, see :ref:`qe-manual-feature-qe`.
     """
-
 [bundle]
 manpages = "manpages.tar.gz"
 
