--- a/source/includes/extracts-agg-operators.yaml
+++ b/source/includes/extracts-agg-operators.yaml
@@ -1113,6 +1113,13 @@ content: |
           :pipeline:`$setWindowFields`
           and as an :ref:`expression <aggregation-expressions>`.
 
+      * - :group:`$median`
+        - .. include:: /includes/aggregation/fact-return-median.rst
+          
+          .. versionadded:: 7.0
+
+          .. include:: /includes/aggregation/fact-operator-availability.rst
+
       * - :expression:`$mergeObjects`
 
         - Returns a document created by combining the input documents
@@ -1125,6 +1132,13 @@ content: |
           .. versionchanged:: 5.0
 
              Available in the :pipeline:`$setWindowFields` stage.
+
+      * - :group:`$percentile`
+        - .. include:: /includes/aggregation/fact-return-percentile.rst
+
+          .. versionadded:: 7.0
+
+          .. include:: /includes/aggregation/fact-operator-availability.rst
 
       * - :group:`$push`
 
@@ -1216,10 +1230,24 @@ content: |
         - Returns the maximum of the specified expression or list of
           expressions for each document
 
+      * - :group:`$median`
+        - .. include:: /includes/aggregation/fact-return-median.rst
+          
+          .. versionadded:: 7.0
+
+          .. include:: /includes/aggregation/fact-operator-availability.rst
+
       * - :group:`$min`
 
         - Returns the minimum of the specified expression or list of
           expressions for each document
+
+      * - :group:`$percentile`
+        - .. include:: /includes/aggregation/fact-return-percentile.rst
+
+          .. versionadded:: 7.0
+
+          .. include:: /includes/aggregation/fact-operator-availability.rst
 
       * - :group:`$stdDevPop`
 
