DOCSP-13410 fixing typos (#3321)
* DOCSP-13410 fixing typos

* fixed typo and updated doc to ref

--- a/source/includes/extracts-transactions.yaml
+++ b/source/includes/extracts-transactions.yaml
@@ -483,7 +483,7 @@ content: |
      the :ref:`in-memory <storage-inmemory>` storage engines.
 
    In MongoDB 4.0, only replica sets using the WiredTiger storage
-   engine supported transactions.
+   engine support transactions.
 
    .. note:: 
 
