DOCS-16164 AutoMerger concept (#3304)
* DOCS-16164 AutoMerger concept

* internal review

* external review

* external review

* link to configureCollectionBalancing command

* addresses feedback

* feedback

--- a/snooty.toml
+++ b/snooty.toml
@@ -256,7 +256,9 @@ fts = "Atlas Search"
 # Automerger Constants
 auto-merge-upper = "AutoMerger"
 auto-merge-lower = "automerger"
+auto-merge-lower-plural = "automerger"
 auto-merge-action = "automerging"
+auto-merge-action-upper = "Automerging"
 # In Use Encryption Constants
 csfle = "Client-Side Field Level Encryption"
 csfle-abbrev = "CSFLE"
