--- a/source/includes/extracts-4.0-errata.yaml
+++ b/source/includes/extracts-4.0-errata.yaml
@@ -1,7 +1,7 @@
 ref: 4.0-errata-tools-2058
 content: |
 
-   :binary:`~bin.mongoreplay`  does not show insert/find commands for MongoDB 4.0.
+   ``mongoreplay``  does not show insert/find commands for MongoDB 4.0.
 
    # Fixed in 4.0.1
 ---
