DOCSP-30639 wildcard index main page (#3374)
* DOCSP-30639 wildcard index main page

* Example

* Monospace

--- a/source/includes/extracts-wildcard-indexes.yaml
+++ b/source/includes/extracts-wildcard-indexes.yaml
@@ -47,10 +47,13 @@ content: |
   Administrators want to create indexes to support queries on any
   subfield of ``userMetadata``.
 
-  A wildcard index on ``userMetadata``
-  can support single-field queries on ``userMetadata``,
-  ``userMetadata.likes``, ``userMetadata.dislikes``, and
-  ``userMetadata.age``:
+  A wildcard index on the ``userMetadata`` field
+  can support single-field queries on:
+  
+  - ``userMetadata``
+  - ``userMetadata.likes``
+  - ``userMetadata.dislikes``
+  - ``userMetadata.age``
 
   .. code-block:: bash
 
