DOCSP-27853: Atlas search mongosh methods (#3390)
* (DOCSP-29546): db.createSearchIndex method (#3140)

* (DOCSP-29546): db.createSearchIndex method

* fix build errors

* add sub-page for mongosh methods

* fix build errors

* change page title

* add wrapper info

* add landing page in snooty.toml

* typo

* edits

* wording

* simplify layout

* tweak example intro

* remove quotes in field names

* address review comments

* single-source table intro

* tweak intro

* fix formatting

* remove accidentally added file (#3290)

* (DOCSP-29548): db.collection.updateSearchIndex method (#3292)

* (DOCSP-29548): db.collection.updateSearchIndex method

* add method descriptions to tables

* add new method page to toc

* fix release note wording

* first pass at replacements

* fix replacements

* more replacements

* replacement for drop

* make example runnable

* update replacements

* fix example

* (DOCSP-29549): dropSearchIndex mongosh method (#3307)

* (DOCSP-29549): dropSearchIndex mongosh method

* standardize collections in examples

* (DOCSP-29881): Add Atlas Search db command outputs (#3139) (#3360)

* (DOCSP-29881): Add Atlas Search db command outputs

* wording

* wording

* typo

* wording

* change admonition language to point to listSearchIndexes

* fix stage name

* adjust language for updateSearchIndex response

* edits

* DOCSP-29552: db.collection.getSearchIndexes method page (#3369)

* WIP

* update toc

* final first draft

* fix build errors

* fix replacement

* fix replacement

* fix replacement

* wording

* remove periods

* wording

* typo

* add link

* add missing replacement

* address review comments

* fix build error

* fix build error

* typo

* single source create access control

* fix typo

* single source access control sections

* add name option

* typo

* wording

* wording

* fix section titl

--- a/snooty.toml
+++ b/snooty.toml
@@ -127,6 +127,7 @@ toc_landing_pages = [
    "/reference/command/nav-user-management",
    "/reference/configuration-options",
    "/reference/method",
+   "/reference/method/js-atlas-search",
    "/reference/method/js-bulk",
    "/reference/method/js-client-side-field-level-encryption",
    "/reference/method/js-collection",
