--- a/source/includes/extracts-agg-stages.yaml
+++ b/source/includes/extracts-agg-stages.yaml
@@ -102,6 +102,10 @@ content: |
           outputs either one document (for the first *n* documents) or
           zero documents (after the first *n* documents).
 
+      * - :pipeline:`$listSearchIndexes`
+
+        - .. include:: /includes/atlas-search-commands/command-descriptions/getSearchIndexes-description.rst
+      
       * - :pipeline:`$listSessions`
 
         - Lists all sessions that have been active long enough to
