--- a/source/includes/extracts-wildcard-indexes.yaml
+++ b/source/includes/extracts-wildcard-indexes.yaml
@@ -90,9 +90,10 @@ content: |
        }
      }
 
-  With the exception of explicitly including  ``_id`` field, you cannot
-  combine inclusion and exclusion statements in the
-  ``wildcardProjection`` document.
+  All of the statements in the ``wildcardProjection`` document must be
+  either inclusion or exclusion statements. You can also include the
+  ``_id`` field with exclusion statements. This is the only exception to
+  the rule. 
 ---
 ref: wildcard-index-inclusion-exclusion
 content: |
