--- a/snooty.toml
+++ b/snooty.toml
@@ -81,6 +81,7 @@ toc_landing_pages = [
    "/core/security-internal-authentication",
    "/core/security-ldap",
    "/core/security-scram",
+   "/core/security-oidc",
    "/core/security-transport-encryption",
    "/core/security-users",
    "/core/security-x.509",
