qe-equality-ga-into-master (#3400)
* Added upsert limitation (#3252)

* Docsp 28305 qe on disk format wire protocol (#3244)

* Cleaned feature branch

* Internal PR feedback

* Fixed lingering merge text

* External review: removed write amplification for delete operations

* Remove insertmany from QE restricted operations (#3251)

* One line fix

* Removed wording around future release functionality for index compaction. Left key creation language because there's a separate ticket for that content.

* Light editorial cleanup, removed refs to technical preview

* Attempted to clean up wording around unique index limitations

* Attempted to clarify limitation around validation settings

* PR feedback

* Syntax fix

* Updated migration guidance

* Revert "Remove insertmany from QE restricted operations (#3251)" (#3296)

This reverts commit f1377c73483ceed9744d4d48647b56295706dcdc.

* Docsp 29188 remove insertmany from restricted (#3300)

* One line fix

* Removed wording around future release functionality for index compaction. Left key creation language because there's a separate ticket for that content.

* Light editorial cleanup, removed refs to technical preview

* Attempted to clean up wording around unique index limitations

* Attempted to clarify limitation around validation settings

* PR feedback

* Syntax fix

* Docsp 30055 qe public preview ga migration guidance (#3280)

* Updated QE GA constant

* QE constant update, external feedback

* PR feedback

* PR feedback

* PR feedback

* DOCSP-30667 QE Limitations Cleanup (#3331)

* Fixed bulleting for one item, re-ordered and grouped some items for better readability

* Fixed a typo

* Docsp 30646 how qe works cleanup (#3333)

* Removed framework term

* Clarified the inclusion of __safeContent__ applies to queryable fields only

* PR feedback

* Docsp 28249 qe redaction (#3291)

* Rebase to latest state of qe-equality-ga

* Cleaned

--- a/snooty.toml
+++ b/snooty.toml
@@ -266,6 +266,9 @@ csfle = "Client-Side Field Level Encryption"
 csfle-abbrev = "CSFLE"
 qe = "Queryable Encryption"
 qe-abbr = ":abbr:`QE (Queryable Encryption)`"
+qe-preview = "{+qe+} Public Preview"
+qe-equality-ga = "{+qe+} with equality queries"
+qe-equality-ga-title = "{+qe+} With Equality Queries"
 in-use-doc = "document with encrypted fields"
 in-use-doc-title = "Document with Encrypted Fields"
 in-use-docs = "documents with encrypted fields"
@@ -285,6 +288,7 @@ aws-iam-abbr = ":abbr:`IAM (Identity and Access Management)`"
 aws-arn-abbr = ":abbr:`ARN (Amazon Resource Name)`"
 aws-long = "Amazon Web Services"
 azure-kv = "Azure Key Vault"
+gcp-abbr = ":abbr:`GCP (Google Cloud Platform)`"
 gcp-kms = "Google Cloud Key Management Service"
 gcp-kms-abbr = "Google Cloud KMS"
 manual-enc = "explicit encryption"
@@ -298,14 +302,17 @@ csfle-code-snippets-gen-keys = "https://github.com/mongodb/docs/tree/master/sour
 libmongocrypt-version = "1.8"
 mongodb-crypt-version = "1.7.3"
 sample-app-url-csfle = "https://github.com/mongodb-university/docs-in-use-encryption-examples/tree/main/csfle"
-sample-app-url-qe = "https://github.com/mongodb-university/docs-in-use-encryption-examples/tree/main/queryable-encryption"
+sample-app-url-qe = "https://github.com/mongodb/docs/tree/master/source/includes/qe-tutorials"
+sample-app-url-qe-old = "https://github.com/mongodb-university/docs-in-use-encryption-examples/tree/main/queryable-encryption"
 enc-fields-map = "encrypted fields map"
 enc-fields-map-title = "Encrypted Fields Map"
 shared-library = "Automatic Encryption Shared Library"
-shared-library-version = "6.0.0"
+shared-library-version = "7.0.0"
 shared-library-version-drop-down = "{+shared-library-version+} (current)"
 shared-library-package = "``crypt_shared``"
+shared-library-download-link = ""
 efm = "``encryptedFieldsMap``"
+efm-title = "encryptedFieldsMap"
 auto-encrypt-options = "autoEncryptionOpts"
 title-auto-encrypt-options = "AutoEncryptionOpts"
 # Driver Constants
@@ -336,14 +343,12 @@ targets = [
     "core/queryable-encryption/*/*.txt",
 ]
 
-variant = "danger"
+variant = "warning"
 value = """
-    Queryable Encryption is in Public Preview and available for \
-    evaluation purposes. Public Preview is not recommended for \
-    production deployments as breaking changes may be introduced. \
-    To learn more about the Preview please see the \
-    `Queryable Encryption Preview <https://www.mongodb.com/blog/post/mongodb-releases-queryable-encryption-preview/>`__ \
-    blog post.
+    {+qe-equality-ga+} is generally available (GA) in \
+    MongoDB 7.0 and later. Data encrypted using the {+qe-preview+} \ 
+    from earlier versions is incompatible with the GA. \
+    For more information, see :ref:`7.0-compatibility`.
     """
 
 [[banners]]
@@ -351,8 +356,8 @@ targets = ["core/csfle.txt", "core/csfle/*.txt", "core/csfle/*/*.txt"]
 
 variant = "tip"
 value = """
-    The next-generation Queryable Encryption feature is now in Public Preview. \
-    To learn more about Queryable Encryption, see :ref:`qe-manual-feature-qe`.
+    {+qe+} is now generally available (GA). \
+    To learn more, see :ref:`qe-manual-feature-qe`.
     """
 [bundle]
 manpages = "manpages.tar.gz"
