--- a/source/includes/extracts-sharded-clusters-backup-restore-limitations.yaml
+++ b/source/includes/extracts-sharded-clusters-backup-restore-limitations.yaml
@@ -11,7 +11,7 @@ content: |
    one of the following coordinated backup and restore processes which
    *do maintain* the atomicity guarantees of transactions across shards:
 
-   - `MongoDB Atlas <https://www.mongodb.com/cloud/atlas?tck=docs_server>`_,
+   - `MongoDB Atlas <https://www.mongodb.com/atlas/database?tck=docs_server>`_,
 
    - `MongoDB Cloud Manager
      <https://www.mongodb.com/cloud/cloud-manager?tck=docs_server>`_, or
