--- a/source/includes/steps-3.6-upgrade-sharded-cluster.yaml
+++ b/source/includes/steps-3.6-upgrade-sharded-cluster.yaml
@@ -277,7 +277,7 @@ pre: |
       cluster to 3.6. For more information, see :issue:`SERVER-33763`.
 
    To enable these |newversion| features, set the feature compatibility
-   version (``FCV``) to |newversion|.
+   version (``fCV``) to |newversion|.
 
    .. note::
 
