DOCSP-30493 indexOfArray Quick Win (#3441)
* DOCSP-30493 indexOfArray Quick Win

* remove from high-level entries

* consistency

* JP feedback

--- a/source/includes/extracts-agg-operators.yaml
+++ b/source/includes/extracts-agg-operators.yaml
@@ -190,8 +190,8 @@ content: |
       * - :expression:`$indexOfArray`
 
         - Searches an array for an occurrence of a specified value and
-          returns the array index of the first occurrence. If the
-          substring is not found, returns ``-1``.
+          returns the array index of the first occurrence. Array indexes start
+          at zero.
 
       * - :expression:`$isArray`
 
