DOCS-16227 Add Jira Version To requirements-changelogs.txt (#3475)
* DOCS-16227 Add Jira Version To requirements-changelogs.txt

* Update changelogs/requirements-changelogs.txt

Co-authored-by: Jeff Allen <jeffrey.allen@10gen.com>

---------

Co-authored-by: Jeff Allen <jeffrey.allen@10gen.com>

--- a/changelogs/requirements-changelogs.txt
+++ b/changelogs/requirements-changelogs.txt
@@ -1,6 +1,6 @@
-###### Requirements without Version Specifiers ######
+###### Requirements ######
 
 cryptography
-jira
+jira==3.4.1
 PyJWT
 rstcloth
