DOCSP-30879 Comma missing in example (#3553)

--- a/source/includes/extracts-parent-fact-count-on-sharded-clusters.yaml
+++ b/source/includes/extracts-parent-fact-count-on-sharded-clusters.yaml
@@ -22,7 +22,7 @@ content: |
   .. code-block:: javascript
   
      db.collection.aggregate( [
-        { $group: { _id: null, count: { $sum: 1 } } }
+        { $group: { _id: null, count: { $sum: 1 } } },
         { $project: { _id: 0 } }
      ] )
 
