DOCS-13449 Replace default dbpath for macos installation (#3577)
* DOCS-13449 Replace default dbpath for macos installation

* typo

--- a/source/includes/steps-run-mongodb-on-osx.yaml
+++ b/source/includes/steps-run-mongodb-on-osx.yaml
@@ -6,18 +6,11 @@ pre: |
   directory to which the :binary:`~bin.mongod` process will write data.
 action:
   pre: |
-    For example, to create the ``/usr/local/var/mongodb`` directory:
+    For example, to create the ``~/data/db`` directory:
   language: sh
   code: |
-    sudo mkdir -p /usr/local/var/mongodb
-  post: |
+    sudo mkdir -p ~/data/db
 
-    .. important::
-
-       Starting with macOS 10.15 Catalina, Apple restricts access to the
-       MongoDB default data directory of ``/data/db``. On macOS 10.15
-       Catalina, you must use a different data directory, such as
-       ``/usr/local/var/mongodb``.
 ---
 title: Create the log directory.
 stepnum: 2
@@ -27,10 +20,10 @@ pre: |
   will write its log file:
 action:
   pre: |
-    For example, to create the ``/usr/local/var/log/mongodb`` directory:
+    For example, to create the ``~/data/log/mongodb`` directory:
   language: sh
   code: |
-    sudo mkdir -p /usr/local/var/log/mongodb
+    sudo mkdir -p ~/data/log/mongodb
 ---
 title: Set permissions for the data and log directories.
 stepnum: 3
@@ -42,11 +35,11 @@ action:
     :binary:`~bin.mongod` as your own user account, and you just created
     the two directories above, they should already accessible to your
     user. Otherwise, you can use ``chown`` to set ownership,
-    substituting the appropriate user:
+    substituting the appropriate *user*:
   language: sh
   code: |
-    sudo chown my_mongodb_user /usr/local/var/mongodb
-    sudo chown my_mongodb_user /usr/local/var/log/mongodb
+    sudo chown <user> ~/data/db
+    sudo chown <user> ~/data/log/mongodb
 ---
 title: Run MongoDB.
 stepnum: 4
@@ -66,7 +59,7 @@ action:
       command-line:
     language: sh
     code: |
-      mongod --dbpath /usr/local/var/mongodb --logpath /usr/local/var/log/mongodb/mongo.log --fork
+      mongod --dbpath ~/data/db --logpath ~/data/log/mongodb/mongo.log --fork
   - heading: Run ``mongod`` with a configuration file
     pre: |
       Run the :binary:`~bin.mongod` process at the system prompt,
