--- a/source/includes/extracts-ssl-facts.yaml
+++ b/source/includes/extracts-ssl-facts.yaml
@@ -1,12 +1,13 @@
 ref: ssl-facts-x509-invalid-certificate
 content: |
 
-   Starting in MongoDB 4.2, if you specify
-   ``--tlsAllowInvalidateCertificates`` or
-   ``net.tls.allowInvalidCertificates: true`` when using x.509
-   authentication, an invalid certificate is only sufficient to
-   establish a TLS connection but it is *insufficient* for
-   authentication.
+   Starting in MongoDB 4.0, if you specify any of the following x.509
+   authentication options, an invalid certificate is
+   sufficient only to establish a TLS connection but it is
+   *insufficient* for authentication:
+
+   - ``--sslAllowInvalidCertificates`` or ``net.ssl.allowInvalidCertificates: true`` for MongoDB 4.0 and later
+   - ``--tlsAllowInvalidCertificates`` or ``net.tls.allowInvalidCertificates: true`` for MongoDB 4.2 and later
 
 ---
 # This is separate from the mongo shell ca file extract since the version is different.
