--- a/source/includes/extracts-resource-locking.yaml
+++ b/source/includes/extracts-resource-locking.yaml
@@ -32,10 +32,8 @@ replacement:
 ref: collMod-resource-lock
 content: |
   
-  The :dbcommand:`collMod` command obtains an exclusive lock on the
-  parent database of the specified collection for the duration of the
-  operation. All subsequent operations on the database and *all* its
-  collections must wait until :dbcommand:`collMod` releases the lock.
+  The :dbcommand:`collMod` command obtains a collection lock on
+  the specified collection for the duration of the operation. 
 ---
 ref: createIndexes-resource-lock
 content: |
