--- a/source/includes/release-pinning.yaml
+++ b/source/includes/release-pinning.yaml
@@ -16,7 +16,7 @@ code: |
 ref: pin-repo-to-version-deb-enterprise
 language: 'sh'
 code: |
-  sudo apt-get install -y {+package-name-enterprise+}={+release+} {+package-name-org+}-database={+release+} {+package-name-enterprise+}-server={+release+} {+package-name+}-mongosh={+release+} {+package-name-enterprise+}-mongos={+release+} {+package-name-enterprise+}-tools={+release+}
+  sudo apt-get install -y {+package-name-enterprise+}={+release+} {+package-name-enterprise+}-database={+release+} {+package-name-enterprise+}-server={+release+} {+package-name+}-mongosh={+release+} {+package-name-enterprise+}-mongos={+release+} {+package-name-enterprise+}-tools={+release+}
 ---
 ref: pin-repo-suse
 language: 'sh'
