DOCS-5728 Notes you can't rotate log for arbiter (#3706)

--- a/source/includes/steps-log-rotate-rename.yaml
+++ b/source/includes/steps-log-rotate-rename.yaml
@@ -37,6 +37,11 @@ post: |
   and audit logs at the same time, if desired. The audit log will be
   rotated in the same fashion as the server log, according to the
   :option:`--logRotate <mongod --logRotate>` setting.
+
+  .. note:: 
+  
+     You can't run this command on an arbiter for an authenticated
+     replica set.
 ---
 stepnum: 4
 ref: list-new-logfiles
