--- a/snooty.toml
+++ b/snooty.toml
@@ -127,6 +127,7 @@ toc_landing_pages = [
    "/reference/command/nav-sharding",
    "/reference/command/nav-user-management",
    "/reference/configuration-options",
+   "/reference/inconsistency-type",
    "/reference/method",
    "/reference/method/js-atlas-search",
    "/reference/method/js-bulk",
