--- a/source/includes/extracts-install-mongodb-manually.yaml
+++ b/source/includes/extracts-install-mongodb-manually.yaml
@@ -2,13 +2,13 @@ ref: install-mongodb-enterprise-manually-suse-15
 content: |
   .. code-block:: bash
 
-     sudo zypper install cyrus-sasl cyrus-sasl-plain cyrus-sasl-gssapi krb5 libcurl4 libldap-2_4-2 libopenssl1_1 libsensors4 libsnmp30 libwrap0
+     sudo zypper install cyrus-sasl cyrus-sasl-plain cyrus-sasl-gssapi krb5 libcurl4 libldap-2_4-2 libopenssl1_1 libsensors4 libwrap0
 ---
 ref: install-mongodb-enterprise-manually-suse-12
 content: |
   .. code-block:: bash
 
-     sudo zypper install cyrus-sasl cyrus-sasl-plain cyrus-sasl-gssapi krb5 libcurl4 libldap-2_4-2 libopenssl1_0_0 libsensors4 libsnmp30 libwrap0 liblzma5
+     sudo zypper install cyrus-sasl cyrus-sasl-plain cyrus-sasl-gssapi krb5 libcurl4 libldap-2_4-2 libopenssl1_0_0 libsensors4 libwrap0 liblzma5
 ---
 ref: install-mongodb-community-manually-suse-15
 content: |
@@ -26,19 +26,19 @@ ref: install-mongodb-enterprise-manually-debian-11
 content: |
   .. code-block:: bash
 
-     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit snmp openssl liblzma5
+     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
 ---
 ref: install-mongodb-enterprise-manually-debian-10
 content: |
   .. code-block:: bash
 
-     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit snmp openssl liblzma5
+     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
 ---
 ref: install-mongodb-enterprise-manually-debian-9
 content: |
   .. code-block:: bash
 
-     sudo apt-get install libcurl3 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit snmp openssl liblzma5
+     sudo apt-get install libcurl3 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
 ---
 ref: install-mongodb-community-manually-debian-11
 content: |
@@ -58,25 +58,23 @@ content: |
 
      sudo apt-get install libcurl3 openssl liblzma5
 ---
-
-
 ref: install-mongodb-enterprise-manually-ubuntu-20
 content: |
   .. code-block:: bash
 
-     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit snmp openssl liblzma5
+     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
 ---
 ref: install-mongodb-enterprise-manually-ubuntu-18
 content: |
   .. code-block:: bash
 
-     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit snmp openssl liblzma5
+     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
 ---
 ref: install-mongodb-enterprise-manually-ubuntu-16
 content: |
   .. code-block:: bash
 
-     sudo apt-get install libcurl3 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit snmp openssl liblzma5
+     sudo apt-get install libcurl3 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
 ---
 ref: install-mongodb-community-manually-ubuntu-20
 content: |
@@ -99,30 +97,29 @@ content: |
 ref: install-mongodb-enterprise-manually-redhat-9
 content: |
   .. code-block:: bash
- 
-     sudo yum install cyrus-sasl cyrus-sasl-gssapi cyrus-sasl-plain krb5-libs libcurl net-snmp openldap openssl xz-libs
+
+     sudo yum install cyrus-sasl cyrus-sasl-gssapi cyrus-sasl-plain krb5-libs libcurl openldap openssl xz-libs
 ---
 ref: install-mongodb-enterprise-manually-redhat-8
 content: |
   .. code-block:: bash
- 
-     sudo yum install cyrus-sasl cyrus-sasl-gssapi cyrus-sasl-plain krb5-libs libcurl net-snmp openldap openssl xz-libs
+
+     sudo yum install cyrus-sasl cyrus-sasl-gssapi cyrus-sasl-plain krb5-libs libcurl openldap openssl xz-libs
 ---
 ref: install-mongodb-enterprise-manually-redhat-7
 content: |
   .. code-block:: bash
 
-     sudo yum install cyrus-sasl cyrus-sasl-gssapi cyrus-sasl-plain krb5-libs libcurl net-snmp openldap openssl xz-libs
+     sudo yum install cyrus-sasl cyrus-sasl-gssapi cyrus-sasl-plain krb5-libs libcurl openldap openssl xz-libs
 ---
 ref: install-mongodb-enterprise-manually-redhat-6
 content: |
   .. code-block:: bash
 
-     sudo yum install cyrus-sasl cyrus-sasl-gssapi cyrus-sasl-plain krb5-libs libcurl net-snmp openldap openssl xz-libs
+     sudo yum install cyrus-sasl cyrus-sasl-gssapi cyrus-sasl-plain krb5-libs libcurl openldap openssl xz-libs
 ---
 ref: install-mongodb-community-manually-redhat
 content: |
   .. code-block:: bash
 
      sudo yum install libcurl openssl xz-libs
-...
