DOCSP-30502 Landing page for SBE (#3442)
* (DOCSP-30502): New page for SBE

* update refs to point to new landing page

* add sbe page to toc

* fix up reference page

* first draft

* tweak intro

* shorten section title

* remove comma

* fix casing in title

* wording

* add clarity for classic

* wording

* reorder bullets

* suggestions per Mihai

* remove comma

* typo

* wording

* wording

* address kyle feedback

* add dropped file

* fix alphabetization in toc

* address review feedback

* add ref

* wording

* fix indentation

* change replacement

* review edits

* consistent terminology

--- a/snooty.toml
+++ b/snooty.toml
@@ -225,7 +225,7 @@ ent-build = "MongoDB Enterprise"
 lts = "Major"
 mdb-shell = "MongoDB Shell"
 sbe = "slot-based query execution engine"
-sbe-short = "slot-based engine"
+sbe-short = "slot-based execution engine"
 sbe-title = "Slot-Based Query Execution Engine"
 version = "{+version+}"
 year = "2022"
@@ -252,8 +252,9 @@ source-available = ":github:`source available and free to use <mongodb/mongo>`"
 pcre-abbr = ":abbr:`PCRE (Perl Compatible Regular Expressions)`"
 pcre = "Perl Compatible Regular Expressions"
 sbe = "slot-based query execution engine"
-sbe-short = "slot-based engine"
+sbe-short = "slot-based execution engine"
 sbe-title = "Slot-Based Query Execution Engine"
+sbe-short-title = "Slot-Based Execution Engine"
 fcv = ":abbr:`fCV (feature compatibility version)`"
 fts = "Atlas Search"
 # Automerger Constants
