DOCS-15857 dateFromString support for additional format specifiers (#3700)
* DOCSP-15857 dateFromString support for additional format specifiers

* Apply suggestions from code review

Co-authored-by: Ashley Brown <98361885+mdb-ashley@users.noreply.github.com>

* DOCS-15857 updates for JW's feedback

---------

Co-authored-by: Ashley Brown <98361885+mdb-ashley@users.noreply.github.com>

--- a/source/includes/extracts-date-format-specifiers.yaml
+++ b/source/includes/extracts-date-format-specifiers.yaml
@@ -104,8 +104,17 @@ content: |
         - Description
         - Possible Values
 
+      * - ``%b``
+        - Abbreviated month (3 letters)
+        - ``jan``, ``feb``, ``mar``, ``apr``, ``may``, ``jun``, ``jul``,
+          ``aug``, ``sep``, ``oct``, ``nov``, ``dec``
+
+      * - ``%B``
+        - Full month name
+        - ``january``-``december``
+
       * - ``%d``
-        - Day of Month (2 digits, zero padded)
+        - Day of month (2 digits, zero padded)
         - ``01``-``31``
 
       * - ``%G``
@@ -117,6 +126,10 @@ content: |
       * - ``%H``
         - Hour (2 digits, zero padded, 24-hour clock)
         - ``00``-``23``
+
+      * - ``%j``
+        - Day of year (3 digits, zero padded)
+        - ``001``-``366``
 
       * - ``%L``
         - Millisecond (3 digits, zero padded)
